gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-unsized-const-params_dg.rs
struct Foo<const N: [u8]>;
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }
// { help "" "" { target *-*-* } .-3 }

fn main() {}

